--- a/ExamScheduler.Server/appsettings.json
+++ b/ExamScheduler.Server/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "DefaultConnection": "Server=Lenovo-Legion-5;Database=BERDA;Trusted_Connection=True;",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
