login_page_start

--- a/ExamScheduler.Server/appsettings.json
+++ b/ExamScheduler.Server/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "DefaultConnection": "Server=Lenovo-Legion-5;Database=BERDA;Trusted_Connection=True;",
+  "DefaultConnection": "Server=DESKTOP-45QCKCV;Database=[Schedule_App;Trusted_Connection=True;",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
