--- a/ExamScheduler.Server/appsettings.json
+++ b/ExamScheduler.Server/appsettings.json
@@ -1,5 +1,7 @@
 {
-  "DefaultConnection": "Server=DESKTOP-45QCKCV;Database=[Schedule_App;Trusted_Connection=True;",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-45QCKCV;Database=Schedule_App;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;Encrypt=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
