Frontend programare examen Student View/Conectarea la DB

--- a/ExamScheduler.Server/appsettings.json
+++ b/ExamScheduler.Server/appsettings.json
@@ -1,5 +1,7 @@
 {
-  "DefaultConnection": "Server=Lenovo-Legion-5;Database=BERDA;Trusted_Connection=True;",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=AYCARAMBA\\SQLEXPRESS;Database=BERDA;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;Encrypt=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
