Rezolvare problema Failed to fetch in swagger

--- a/ExamScheduler.Server/Properties/launchSettings.json
+++ b/ExamScheduler.Server/Properties/launchSettings.json
@@ -13,6 +13,7 @@
     },
     "https": {
       "commandName": "Project",
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
@@ -28,6 +29,14 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
+      }
+    },
+    "Frontend": {
+      "commandName": "Executable",
+      "launchBrowser": true,
+      "applicationUrl": "http://localhost:50733",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
   },
