--- a/ExamScheduler.Server/appsettings.json
+++ b/ExamScheduler.Server/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Cors": {
+    "AllowedOrigins": [ "http://localhost:50733", "http://localhost:5016" ],
+    "AllowedMethods": [ "GET", "POST", "PUT", "DELETE" ],
+    "AllowedHeaders": [ "*" ]
+  }
 }
