--- a/ExamScheduler.Server/appsettings.json
+++ b/ExamScheduler.Server/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Issuer": "YourIssuer",
+    "Audience": "YourAudience",
+    "SecretKey": "my_very_secure_secret_key_that_is_256_bits_long!!" // Ensure this is 256 bits long
+  },
   "AllowedHosts": "*"
 }
