--- a/examscheduler.client/package.json
+++ b/examscheduler.client/package.json
@@ -25,5 +25,6 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "vite": "^5.4.10"
-  }
+  },
+  "proxy": "https://localhost:7118;http://localhost:5274"
 }
