--- a/ExamScheduler.Server/appsettings.json
+++ b/ExamScheduler.Server/appsettings.json
@@ -8,10 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Cors": {
-    "AllowedOrigins": [ "http://localhost:50733", "http://localhost:5016" ],
-    "AllowedMethods": [ "GET", "POST", "PUT", "DELETE" ],
-    "AllowedHeaders": [ "*" ]
-  }
+  "Jwt": {
+    "Issuer": "YourIssuer",
+    "Audience": "YourAudience",
+    "SecretKey": "my_very_secure_secret_key_that_is_256_bits_long!!" // Ensure this is 256 bits long
+  },
+  "AllowedHosts": "*"
 }
