--- a/ExamScheduler.Server/appsettings.json
+++ b/ExamScheduler.Server/appsettings.json
@@ -13,5 +13,13 @@
     "Audience": "YourAudience",
     "SecretKey": "my_very_secure_secret_key_that_is_256_bits_long!!" // Ensure this is 256 bits long
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailSettings": {
+    "SmtpServer": "smtp-mail.outlook.com",
+    "Port": 587,
+    "SenderEmail": "berda.3143a@gmail.com",
+    "SenderName": "Exam Scheduler",
+    "encryption": "STARTTLS",
+    "Password": "Berda123!"
+  }
 }
