--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "jwt-decode": "^4.0.0",
     "react-calendar": "^5.1.0",
     "react-router-dom": "^7.0.1"
+  },
+  "devDependencies": {
+    "cypress": "^13.16.0"
   }
 }
