--- a/examscheduler.client/package.json
+++ b/examscheduler.client/package.json
@@ -28,5 +28,5 @@
     "globals": "^15.11.0",
     "vite": "^5.4.10"
   },
-  "proxy": "https://localhost:7118;http://localhost:5274"
+  "proxy": "https://localhost:7118;http://localhost:5274;http://localhost:5000"
 }
