--- a/examscheduler.client/package.json
+++ b/examscheduler.client/package.json
@@ -3,12 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+    "scripts": {
+        "start": "react-scripts start",
+        "dev": "vite",
+        "build": "vite build",
+        "lint": "eslint .",
+        "preview": "vite preview"
+    },
   "dependencies": {
     "jwt-decode": "^4.0.0",
     "npm": "^10.9.0",
