--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "cors": "^2.8.5",
     "jwt-decode": "^4.0.0",
     "react-calendar": "^5.1.0",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "react-scripts": "^5.0.1"
   }
 }
