some changes adding a new section in sidebar for professor
some changes

--- a/ExamScheduler.Server/appsettings.json
+++ b/ExamScheduler.Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=BERDA;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;Encrypt=True"
+    "DefaultConnection": "Server=DESKTOP-45QCKCV\\MSSQLSERVER03;Database=BERDA;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;Encrypt=True"
   },
   "Logging": {
     "LogLevel": {
