--- a/package.json
+++ b/package.json
@@ -6,5 +6,18 @@
     "jwt-decode": "^4.0.0",
     "react-calendar": "^5.1.0",
     "react-router-dom": "^7.0.2"
-  }
+  },
+  "devDependencies": {
+    "cypress": "^13.17.0"
+  },
+  "name": "exam-scheduler-main",
+  "version": "1.0.0",
+  "description": "This is the repository for the IP project.",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
