--- a/examscheduler.client/package.json
+++ b/examscheduler.client/package.json
@@ -3,14 +3,15 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-    "scripts": {
-        "start": "react-scripts start",
-        "dev": "vite",
-        "build": "vite build",
-        "lint": "eslint .",
-        "preview": "vite preview"
-    },
+  "scripts": {
+    "start": "react-scripts start",
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
   "dependencies": {
+    "axios": "^1.7.9",
     "jwt-decode": "^4.0.0",
     "npm": "^10.9.0",
     "react": "^18.3.1",
